Fix language selection hover/z-index

--- a/src/style/components/_cach-section.sass
+++ b/src/style/components/_cach-section.sass
@@ -44,6 +44,7 @@
         position: absolute
         top: 1rem + $space-header-height
         right: 0
+        z-index: 50
 
   &.-contato
     min-height: 100vh
