--- a/style/style.css
+++ b/style/style.css
@@ -398,6 +398,7 @@ main {
   position: absolute;
   top: 6.5rem;
   right: 0;
+  z-index: 50;
 }
 
 .cach-section.-contato {
